# selenium-tests

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
allure-results/: 5532fd7f-f5ce-43a6-ae96-afd9b203de23-result.json  cbd20cb0-6182-43f4-88bd-314a0c1cc3ab-container.json
src/: bank.py  base.py  locators.py  utils.py  wedriver_factory.py
tests/: tests.py
